--- a/multi.ipynb
+++ b/multi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9f4f9a73",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_auc_score, accuracy_score, classification_report, roc_curve, auc,f1_score\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.utils.class_weight import compute_class_weight,compute_sample_weight\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
@@ -1013,6 +1014,27 @@
     "#     print(\"Skipping PCA\")\n",
     "#     X_train_final = X_train_s\n",
     "#     X_val_final   = X_val_s\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6e7ee15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg = LogisticRegression(\n",
+    "    multi_class='multinomial',   # required for >2 classes\n",
+    "    solver='lbfgs',\n",
+    "    max_iter=2000\n",
+    ")\n",
+    "log_reg.fit(X_train_s, y_train)\n",
+    "y_pred = log_reg.predict(X_val_s)\n",
+    "\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_val, y_pred))\n",
+    "\n",
+    "print(\"Macro F1 Score:\", f1_score(y_val, y_pred, average='macro'))"
    ]
   },
   {
